argo-cd/argocd-bootstrap/argo-cd/virtualservice.yml
apiVersion: networking.istio.io/v1beta1
kind: VirtualService
metadata:
  name: argocd
spec:
  gateways:
    - istio-system/istio-gateway
  hosts:
    - argocd.diegoluisi.eti.br
  http:
    - route:
      - destination:
          host: argocd-server
          port:
            number: 80
